--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 			}
 	@font-face {
 			 font-family: "Essays 1743";
-			 src: url('f/essays1743-webfont.ttf') format('truetype'); /* TTF file for CSS3 browsers */
+			 src: url('fonts/essays1743-webfont.ttf') format('truetype'); /* TTF file for CSS3 browsers */
 			}
 	@font-face {
 			 font-family: "Essays 1743";
-			 src: url('f/essays1743-webfont.eot'); /* EOT file for IE */
+			 src: url('fonts/essays1743-webfont.eot'); /* EOT file for IE */
 			}
 
 	/* Reset */
