--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 		
 		<p>
 			<h2>SOCIAL MEDIA LINKS</h2>
-			You can take a look at my <a href="http://www.lerion.com">blog</a>, view the <a href="http://www.flickr.com/photos/lerion">pictures</a> posted on Flickr, visit my <a href="http://twitter.com/jaumeteruel">tweets</a>, browse my <a href="http://www.vimeo.com/lerion/videos">videos</a> or add my <a href="http://www.facebook.com/jaume.teruel">facebook</a> / <a href="http://es.linkedin.com/in/jaumeteruel">linkedin</a> accounts where you can get an idea of my hobbies. And if you have any questions, suggestions or insults, please send it to the following address: jaumeteruel [at] gmail [dot] com
+			You can take a look at my <a href="http://www.lerion.com">blog</a>, view the <a href="http://www.flickr.com/photos/lerion">pictures</a> posted on Flickr, visit my <a href="http://twitter.com/jaumeteruel">tweets</a>, browse my <a href="http://www.vimeo.com/lerion/videos">videos</a> or add my <a href="http://www.facebook.com/jaume.teruel">facebook</a> / <a href="http://es.linkedin.com/in/jaumeteruel">linkedin</a> accounts where you can get an idea of my hobbies. And if you have any questions, suggestions or insults, please send it to the following address: jaumeteruel [at] gmail.com
 			<br /><br />By the way, welcome to my personal website.
 		</p>
 	
